--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <li>
                   <span data-tooltip aria-haspopup="true" data-options="disable_for_touch:true" class="has-tip [tip-right] [radius round]"
                     title="Linkedin">
-                    <a href="https://www.linkedin.com/in/jayasuryasakamuri/" target="_blank">
+                    <a href="https://www.linkedin.com/in/hiteshsakamuri/" target="_blank">
                       <img src="images/linkedin.svg" width=30 alt="">
                     </a>
                   </span>
