--- a/about.html
+++ b/about.html
@@ -111,16 +111,16 @@
           </div>
 
           <div class="card-section">
-            <h5><span class="underline">B.E. (2013-2017)</span></h5>
+            <h5><span class="underline">B.TECH. (2015-2019)</span></h5>
             <ul class="list">
               <li>
-                <h6>Computer Science and Engineering.</h6>
+                <h6>Electronics and Communications Engineering.</h6>
               </li>
               <li>
-                <h6>Sri Sai Ram engineering college, Chennai, Tamil Nadu.</h6>
+                <h6>Sree Vidyanikethan Engineering College , Tirupati , Andhra Pradesh</h6>
               </li>
               <li>
-                <h6>GPA:- 7.6</h6>
+                <h6>GPA:- 8.3</h6>
               </li>
             </ul>
             <hr class="style">
@@ -133,11 +133,11 @@
                 <h6>Sri chaitanya junior college, Tirupati, Andhra pradesh.</h6>
               </li>
               <li>
-                <h6>Marks:- 95.4%</h6>
+                <h6>Marks:- 95.8%</h6>
               </li>
             </ul>
             <hr class="style">
-            <h5><span class="underline">10<sup>th</sup>(2010-2011)</span></h5>
+            <h5><span class="underline">10<sup>th</sup>(2013-2015)/span></h5>
             <ul>
               <li>
                 <h6>State Syllabus(Maths)</h6>
@@ -146,7 +146,7 @@
                 <h6>Rayalaseema High school, Tirupati, Andhra pradesh.</h6>
               </li>
               <li>
-                <h6>Marks:- 90%</h6>
+                <h6>Marks:- 97%</h6>
               </li>
             </ul>
 
@@ -167,7 +167,7 @@
                     title="Github"><a href="https://github.com/Jsurya1" target="_blank"><img src="images/github.svg" width=30 alt=""></a></span></li>
 
                 <li><span data-tooltip aria-haspopup="true" data-options="disable_for_touch:true" class="has-tip [tip-right] [radius round]"
-                    title="Linkedin"><a href="https://www.linkedin.com/in/jayasuryasakamuri/" target="_blank"><img src="images/linkedin.svg" width=30 alt=""></a></span></li>
+                    title="Linkedin"><a href="https://www.linkedin.com/in/hiteshsakamuri/" target="_blank"><img src="images/linkedin.svg" width=30 alt=""></a></span></li>
 
                 <li><span data-tooltip aria-haspopup="true" data-options="disable_for_touch:true" class="has-tip [tip-right] [radius round]"
                     title="Codepen"><a href="https://codepen.io/Surya1/" target="_blank"><img src="images/codepen.svg" width=30 alt=""></a></span></li>
