--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
               Want to give me any advices to improve this website?, Please drop a message(Thank You!).
             </h6>
 
-            <div id="contact-pos"><a href="mailto:jayasuryasakamuri@gmail.com" target="_top" class="button">Contact me<img src="images/mail.svg" alt="mail-icon"></a>
+            <div id="contact-pos"><a href="mailto:hiteshsakamuri@gmail.com" target="_top" class="button">Contact me<img src="images/mail.svg" alt="mail-icon"></a>
             </div>
           </div>
         </div>
@@ -67,7 +67,7 @@
                     title="Github"><a href="https://github.com/Jsurya1" target="_blank"><img src="images/github.svg" width=30 alt=""></a></span></li>
 
                 <li><span data-tooltip aria-haspopup="true" data-options="disable_for_touch:true" class="has-tip [tip-right] [radius round]"
-                    title="Linkedin"><a href="https://www.linkedin.com/in/jayasuryasakamuri/" target="_blank"><img src="images/linkedin.svg" width=30 alt=""></a></span></li>
+                    title="Linkedin"><a href="https://www.linkedin.com/in/hiteshsakamuri/" target="_blank"><img src="images/linkedin.svg" width=30 alt=""></a></span></li>
 
                 <li><span data-tooltip aria-haspopup="true" data-options="disable_for_touch:true" class="has-tip [tip-right] [radius round]"
                     title="Codepen"><a href="https://codepen.io/Surya1/" target="_blank"><img src="images/codepen.svg" width=30 alt=""></a></span></li>
